Harden literal-range flag insertion in translator tests